--- a/style2.css
+++ b/style2.css
@@ -92,18 +92,22 @@
         @media screen and (max-width: 600px){
             .data, .temp, .length, .weight, .time{
                 height: 400px;
-                width: 65%;
+                width: 60%;
                 border: 2px solid black;
                 position: absolute;
-                left: 30%;
+                left: 35%;
                 top: 35%;
                 padding: 5%;
                 visibility: hidden;
+                border-radius: 20px;
             }
         }
-    @media screen and (max-width: 600px){
+        @media screen and (max-width: 600px){
             .form-control-1, .form-control-2, .form-control-3, .form-control-4, .form-control-5{
                 width: 100px;
+            }
+            h1{
+                font-size: 30px;
             }
         }
         /* Media query end */
